objects/Territory_Region_Mapping__mdt.object
<CustomObject>
    <description>This has been created to map and assign respective sales region, state based on Address.</description>
    <label>Territory Region Mapping</label>
    <pluralLabel>Territory Region Mappings</pluralLabel>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>Strategic Named Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsEnterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEnterprise</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>